Avoid layout shift..

--- a/css/schwermetallband.css
+++ b/css/schwermetallband.css
@@ -54,8 +54,9 @@ img.bandlogo {
 	padding-top: 3%;
 	padding-bottom: 10%;
 	max-width: 60%;
+	height: 1088px;
+	aspect-ratio: 1933 / 1088;
 	object-fit: contain;
-	aspect-ratio: auto 1933 / 1088;
 }
 .topNav {
 	top: 0;
